
INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2747. Update master to reflect 0.8.0-alpha release.

Release 0.8.0-alpha: 2015-08-29 

INCOMPATIBLE CHANGES
  TEZ-2048. Remove VertexManagerPluginContext.getTaskContainer()
  TEZ-2565. Consider scanning unfinished tasks in VertexImpl::constructStatistics to reduce merge overhead.
  TEZ-2468. Change the minimum Java version to Java 7.

ALL CHANGES:
  TEZ-2748. Fix master build against hadoop-2.2. 
  TEZ-2743. Fix TezContainerLauncher logging tokens.
  TEZ-2708. Rename classes and variables post TEZ-2003 changes.
  TEZ-2740. Create a reconfigureVertex alias for deprecated
  setVertexParallelism API
  TEZ-2690. Add critical path analyser
  TEZ-2734. Add a test to verify the filename generated by OnDiskMerge.
  TEZ-2732. DefaultSorter throws ArrayIndex exceptions on 2047 Mb size sort buffers
  TEZ-2687. ATS History shutdown happens before the min-held containers are released
  TEZ-2629. LimitExceededException in Tez client when DAG has exceeds the default max counters
  TEZ-2730. tez-api missing dependency on org.codehaus.jettison for json.
  TEZ-2719. Consider reducing logs in unordered fetcher with shared-fetch option
  TEZ-2646. Add scheduling casual dependency for attempts
  TEZ-2647. Add input causality dependency for attempts
  TEZ-2633. Allow VertexManagerPlugins to receive and report based on attempts
  instead of tasks
  TEZ-2650. Timing details on Vertex state changes
  TEZ-2699. Internalize strings in ATF parser
  TEZ-2701. Add time at which container was allocated to attempt
  TEZ-2683. TestHttpConnection::testAsyncHttpConnectionInterrupt fails in certain environments.
  TEZ-2692. bugfixes & enhancements related to job parser and analyzer.
  TEZ-2663. SessionNotRunning exceptions are wrapped in a ServiceException from a dying AM.
  TEZ-2630. TezChild receives IP address instead of FQDN.
  TEZ-2684. ShuffleVertexManager.parsePartitionStats throws IllegalStateException: Stats should be initialized.