@@ -17,6 +17,7 @@ INCOMPATIBLE CHANGES
   TEZ-2468. Change the minimum Java version to Java 7.
 
 ALL CHANGES:
+  TEZ-2749. TaskInfo in history parser should not depend on the apache directory project. Fix master build against hadoop-2.4
   TEZ-2748. Fix master build against hadoop-2.2. 
   TEZ-2743. Fix TezContainerLauncher logging tokens.
   TEZ-2708. Rename classes and variables post TEZ-2003 changes.
